--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,11 @@
 :root {
- --background: 0 0% 100%;
+ --text: 243 76% 5%;
+ --background: 240 60% 99%;
+ --primary: 243 68% 48%;
+ --secondary: 243 100% 93%;
+ --accent: 242 100% 62%;
+
+ /* --background: 0 0% 100%; */
  --foreground: 0 0% 3.9%;
 
  --card: 0 0% 100%;
@@ -8,16 +14,16 @@
  --popover: 0 0% 100%;
  --popover-foreground: 0 0% 3.9%;
 
- --primary: 0 0% 9%;
+ /* --primary: 0 0% 9%; */
  --primary-foreground: 0 0% 98%;
 
- --secondary: 0 0% 96.1%;
+ /* --secondary: 0 0% 96.1%; */
  --secondary-foreground: 0 0% 9%;
 
  --muted: 0 0% 96.1%;
  --muted-foreground: 0 0% 45.1%;
 
- --accent: 0 0% 96.1%;
+ /* --accent: 0 0% 96.1%; */
  --accent-foreground: 0 0% 9%;
 
  --destructive: 0 84.2% 60.2%;
@@ -31,7 +37,13 @@
 }
 
 [data-kb-theme="dark"] {
- --background: 0 0% 3.9%;
+ --text: 243 76% 95%;
+ --background: 240 60% 1%;
+ --primary: 243 68% 52%;
+ --secondary: 243 100% 7%;
+ --accent: 242 100% 38%;
+
+ /* --background: 0 0% 3.9%; */
  --foreground: 0 0% 98%;
 
  --card: 0 0% 3.9%;
@@ -40,16 +52,16 @@
  --popover: 0 0% 3.9%;
  --popover-foreground: 0 0% 98%;
 
- --primary: 0 0% 98%;
+ /* --primary: 0 0% 98%; */
  --primary-foreground: 0 0% 9%;
 
- --secondary: 0 0% 14.9%;
+ /* --secondary: 0 0% 14.9%; */
  --secondary-foreground: 0 0% 98%;
 
  --muted: 0 0% 14.9%;
  --muted-foreground: 0 0% 63.9%;
 
- --accent: 0 0% 14.9%;
+ /* --accent: 0 0% 14.9%; */
  --accent-foreground: 0 0% 98%;
 
  --destructive: 0 62.8% 30.6%;
@@ -125,21 +137,4 @@ ol {
 }
 body {
  @apply bg-background text-foreground;
-}
-
-main {
- display: grid;
- grid-template-areas:
-  "header header"
-  "sidebar content";
- grid-template-columns: auto 2fr;
- grid-template-rows: auto 1fr;
-}
-
-header {
- grid-area: header;
-}
-
-aside {
- grid-area: sidebar;
 }
